tests/cases/errors/compile_print_no_semicolon.lox
// Note: the message in src/compiler.c contains the typo "afer" instead of "after".
// expect compile error: Expect ';' afer value.
print 1
